--- a/project-08-part-1.ipynb
+++ b/project-08-part-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -49,31 +49,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>15887</th>\n",
-       "      <td>Declaração de Erdogan sobre comícios banaliza ...</td>\n",
-       "      <td>A chanceler alemã, Angela Merkel, afirmou nest...</td>\n",
-       "      <td>2017-06-03</td>\n",
-       "      <td>mundo</td>\n",
+       "      <th>91</th>\n",
+       "      <td>Vereadores atuam contra ciclovias, e secretári...</td>\n",
+       "      <td>A vereadora Edir Sales (PSD) já organizou abai...</td>\n",
+       "      <td>2017-05-27</td>\n",
+       "      <td>cotidiano</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>http://www1.folha.uol.com.br/mundo/2017/03/186...</td>\n",
+       "      <td>http://www1.folha.uol.com.br/cotidiano/2017/05...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27277</th>\n",
-       "      <td>Boko Haram sequestrou mais de 2.000 mulheres n...</td>\n",
-       "      <td>A facção radical Boko Haram sequestrou ao meno...</td>\n",
-       "      <td>2015-04-14</td>\n",
+       "      <th>11241</th>\n",
+       "      <td>Hiroshima recorda bombardeio e pede desarmamen...</td>\n",
+       "      <td>Os japoneses relembraram neste domingo (6) o p...</td>\n",
+       "      <td>2017-06-08</td>\n",
        "      <td>mundo</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>http://www1.folha.uol.com.br/mundo/2015/04/161...</td>\n",
+       "      <td>http://www1.folha.uol.com.br/mundo/2017/08/190...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7561</th>\n",
-       "      <td>Apoio mundial a acordo nuclear deixa Israel co...</td>\n",
-       "      <td>O acordo nuclear entre o Irã e um grupo de paí...</td>\n",
-       "      <td>2015-07-15</td>\n",
-       "      <td>mundo</td>\n",
+       "      <th>14279</th>\n",
+       "      <td>No Rio, tratamentos de câncer são interrompido...</td>\n",
+       "      <td>Quase a metade dos tratamentos de câncer na ca...</td>\n",
+       "      <td>2017-03-14</td>\n",
+       "      <td>cotidiano</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>http://www1.folha.uol.com.br/mundo/2015/07/165...</td>\n",
+       "      <td>http://www1.folha.uol.com.br/cotidiano/2017/03...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -81,19 +81,24 @@
       ],
       "text/plain": [
        "                                                   title  \\\n",
-       "15887  Declaração de Erdogan sobre comícios banaliza ...   \n",
-       "27277  Boko Haram sequestrou mais de 2.000 mulheres n...   \n",
-       "7561   Apoio mundial a acordo nuclear deixa Israel co...   \n",
+       "91     Vereadores atuam contra ciclovias, e secretári...   \n",
+       "11241  Hiroshima recorda bombardeio e pede desarmamen...   \n",
+       "14279  No Rio, tratamentos de câncer são interrompido...   \n",
        "\n",
-       "                                                    text        date category  \\\n",
-       "15887  A chanceler alemã, Angela Merkel, afirmou nest...  2017-06-03    mundo   \n",
-       "27277  A facção radical Boko Haram sequestrou ao meno...  2015-04-14    mundo   \n",
-       "7561   O acordo nuclear entre o Irã e um grupo de paí...  2015-07-15    mundo   \n",
+       "                                                    text        date  \\\n",
+       "91     A vereadora Edir Sales (PSD) já organizou abai...  2017-05-27   \n",
+       "11241  Os japoneses relembraram neste domingo (6) o p...  2017-06-08   \n",
+       "14279  Quase a metade dos tratamentos de câncer na ca...  2017-03-14   \n",
        "\n",
-       "      subcategory                                               link  \n",
-       "15887         NaN  http://www1.folha.uol.com.br/mundo/2017/03/186...  \n",
-       "27277         NaN  http://www1.folha.uol.com.br/mundo/2015/04/161...  \n",
-       "7561          NaN  http://www1.folha.uol.com.br/mundo/2015/07/165...  "
+       "        category subcategory  \\\n",
+       "91     cotidiano         NaN   \n",
+       "11241      mundo         NaN   \n",
+       "14279  cotidiano         NaN   \n",
+       "\n",
+       "                                                    link  \n",
+       "91     http://www1.folha.uol.com.br/cotidiano/2017/05...  \n",
+       "11241  http://www1.folha.uol.com.br/mundo/2017/08/190...  \n",
+       "14279  http://www1.folha.uol.com.br/cotidiano/2017/03...  "
       ]
      },
      "metadata": {},
@@ -130,31 +135,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11160</th>\n",
-       "      <td>Warriors viram a série contra o Thunder e avan...</td>\n",
-       "      <td>O Golden State Warriors derrotou o Oklahoma Ci...</td>\n",
-       "      <td>2016-05-31</td>\n",
-       "      <td>esporte</td>\n",
+       "      <th>11762</th>\n",
+       "      <td>Barclays vai encerrar sua cobertura doméstica ...</td>\n",
+       "      <td>O Barclays iniciou uma nova rodada de corte de...</td>\n",
+       "      <td>2016-01-21</td>\n",
+       "      <td>mercado</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>http://www1.folha.uol.com.br/esporte/2016/05/1...</td>\n",
+       "      <td>http://www1.folha.uol.com.br/mercado/2016/01/1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10956</th>\n",
-       "      <td>Inflação alta é o problema que mais preocupa o...</td>\n",
-       "      <td>De todos os problemas que, reunidos, podem tra...</td>\n",
-       "      <td>2015-05-02</td>\n",
-       "      <td>colunas</td>\n",
-       "      <td>monicabergamo</td>\n",
-       "      <td>http://www1.folha.uol.com.br/colunas/monicaber...</td>\n",
+       "      <th>3637</th>\n",
+       "      <td>Trump ameaça aliados que votarem contra lei qu...</td>\n",
+       "      <td>Para os deputados republicanos que ainda estão...</td>\n",
+       "      <td>2017-03-21</td>\n",
+       "      <td>mundo</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://www1.folha.uol.com.br/mundo/2017/03/186...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8802</th>\n",
-       "      <td>Com menos ouros e menos medalhas, ginástica pi...</td>\n",
-       "      <td>A ginástica artística brasileira deixa Toronto...</td>\n",
-       "      <td>2015-07-15</td>\n",
-       "      <td>esporte</td>\n",
+       "      <th>18914</th>\n",
+       "      <td>Não há perseguição política contra Cristina Ki...</td>\n",
+       "      <td>Responsável por duas das principais denúncias ...</td>\n",
+       "      <td>2016-08-23</td>\n",
+       "      <td>mundo</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>http://www1.folha.uol.com.br/esporte/2015/07/1...</td>\n",
+       "      <td>http://www1.folha.uol.com.br/mundo/2016/08/180...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -162,19 +167,19 @@
       ],
       "text/plain": [
        "                                                   title  \\\n",
-       "11160  Warriors viram a série contra o Thunder e avan...   \n",
-       "10956  Inflação alta é o problema que mais preocupa o...   \n",
-       "8802   Com menos ouros e menos medalhas, ginástica pi...   \n",
+       "11762  Barclays vai encerrar sua cobertura doméstica ...   \n",
+       "3637   Trump ameaça aliados que votarem contra lei qu...   \n",
+       "18914  Não há perseguição política contra Cristina Ki...   \n",
        "\n",
        "                                                    text        date category  \\\n",
-       "11160  O Golden State Warriors derrotou o Oklahoma Ci...  2016-05-31  esporte   \n",
-       "10956  De todos os problemas que, reunidos, podem tra...  2015-05-02  colunas   \n",
-       "8802   A ginástica artística brasileira deixa Toronto...  2015-07-15  esporte   \n",
+       "11762  O Barclays iniciou uma nova rodada de corte de...  2016-01-21  mercado   \n",
+       "3637   Para os deputados republicanos que ainda estão...  2017-03-21    mundo   \n",
+       "18914  Responsável por duas das principais denúncias ...  2016-08-23    mundo   \n",
        "\n",
-       "         subcategory                                               link  \n",
-       "11160            NaN  http://www1.folha.uol.com.br/esporte/2016/05/1...  \n",
-       "10956  monicabergamo  http://www1.folha.uol.com.br/colunas/monicaber...  \n",
-       "8802             NaN  http://www1.folha.uol.com.br/esporte/2015/07/1...  "
+       "      subcategory                                               link  \n",
+       "11762         NaN  http://www1.folha.uol.com.br/mercado/2016/01/1...  \n",
+       "3637          NaN  http://www1.folha.uol.com.br/mundo/2017/03/186...  \n",
+       "18914         NaN  http://www1.folha.uol.com.br/mundo/2016/08/180...  "
       ]
      },
      "metadata": {},
@@ -185,8 +190,8 @@
     "# dados_treino = pd.read_csv(r\"..\\06-word2vec-interpretação-da-linguagem-humana-com-word-embedding\\database-train-project-07.csv\")\n",
     "# dados_teste = pd.read_csv(r\"..\\06-word2vec-interpretação-da-linguagem-humana-com-word-embedding\\database-test-project-07.csv\")\n",
     "\n",
-    "dados_teste = pd.read_csv(\"https://raw.githubusercontent.com/goosekiing/word2vec-interpretacao-da-linguagem-humana-com-word-embedding/main/database-test-project-07.csv\")\n",
-    "dados_treino = pd.concat([pd.read_csv(f\"https://raw.githubusercontent.com/goosekiing/word2vec-interpretacao-da-linguagem-humana-com-word-embedding/main/database-train-project-07-part-{i+1}.csv\") for i in range(3)])\n",
+    "dados_teste = pd.read_csv(\"https://raw.githubusercontent.com/goosekiing/word2vec-interpretacao-da-linguagem-humana-com-word-embedding/eb26014ad11cf54981bc048c541f4b28f8f0337b/database-test-project-07.csv\")\n",
+    "dados_treino = pd.concat([pd.read_csv(f\"https://raw.githubusercontent.com/goosekiing/word2vec-interpretacao-da-linguagem-humana-com-word-embedding/eb26014ad11cf54981bc048c541f4b28f8f0337b/database-train-project-07-part-{i+1}.csv\") for i in range(3)])\n",
     "\n",
     "display(dados_treino.sample(3), dados_teste.sample(3))"
    ]
