--- a/project-08-part-2.ipynb
+++ b/project-08-part-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,31 +51,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>64047</th>\n",
-       "      <td>Negociação entre Odebrecht e MPF na Lava Jato ...</td>\n",
-       "      <td>A negociação entre a Odebrecht e o Ministério ...</td>\n",
-       "      <td>2016-08-26</td>\n",
-       "      <td>colunas</td>\n",
-       "      <td>monicabergamo</td>\n",
-       "      <td>http://www1.folha.uol.com.br/colunas/monicaber...</td>\n",
+       "      <th>14882</th>\n",
+       "      <td>Protesto contra falta de energia elétrica ocup...</td>\n",
+       "      <td>Cerca de 150 moradores protestam na noite dest...</td>\n",
+       "      <td>2015-03-21</td>\n",
+       "      <td>cotidiano</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://www1.folha.uol.com.br/cotidiano/2015/03...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38754</th>\n",
-       "      <td>Irã cancela conferência em Londres sobre contr...</td>\n",
-       "      <td>O Irã cancelou uma conferência em Londres onde...</td>\n",
-       "      <td>2016-01-30</td>\n",
+       "      <th>6991</th>\n",
+       "      <td>Atlético-MG vence e se aproxima do Corinthians</td>\n",
+       "      <td>O Atlético-MG conquistou a segunda vitória con...</td>\n",
+       "      <td>2015-09-09</td>\n",
+       "      <td>esporte</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://www1.folha.uol.com.br/esporte/2015/09/1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9006</th>\n",
+       "      <td>3G Capital tem até US$ 15 bilhões para usar em...</td>\n",
+       "      <td>O grupo de capital privado 3G Capital, que enc...</td>\n",
+       "      <td>2017-02-20</td>\n",
        "      <td>mercado</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>http://www1.folha.uol.com.br/mercado/2016/01/1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83780</th>\n",
-       "      <td>De volta à zona de rebaixamento</td>\n",
-       "      <td>Dilma Rousseff vai vetar a contrarreforma da P...</td>\n",
-       "      <td>2015-06-18</td>\n",
-       "      <td>colunas</td>\n",
-       "      <td>viniciustorres</td>\n",
-       "      <td>http://www1.folha.uol.com.br/colunas/viniciust...</td>\n",
+       "      <td>http://www1.folha.uol.com.br/mercado/2017/02/1...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -83,19 +83,24 @@
       ],
       "text/plain": [
        "                                                   title  \\\n",
-       "64047  Negociação entre Odebrecht e MPF na Lava Jato ...   \n",
-       "38754  Irã cancela conferência em Londres sobre contr...   \n",
-       "83780                    De volta à zona de rebaixamento   \n",
+       "14882  Protesto contra falta de energia elétrica ocup...   \n",
+       "6991      Atlético-MG vence e se aproxima do Corinthians   \n",
+       "9006   3G Capital tem até US$ 15 bilhões para usar em...   \n",
        "\n",
-       "                                                    text        date category  \\\n",
-       "64047  A negociação entre a Odebrecht e o Ministério ...  2016-08-26  colunas   \n",
-       "38754  O Irã cancelou uma conferência em Londres onde...  2016-01-30  mercado   \n",
-       "83780  Dilma Rousseff vai vetar a contrarreforma da P...  2015-06-18  colunas   \n",
+       "                                                    text        date  \\\n",
+       "14882  Cerca de 150 moradores protestam na noite dest...  2015-03-21   \n",
+       "6991   O Atlético-MG conquistou a segunda vitória con...  2015-09-09   \n",
+       "9006   O grupo de capital privado 3G Capital, que enc...  2017-02-20   \n",
        "\n",
-       "          subcategory                                               link  \n",
-       "64047   monicabergamo  http://www1.folha.uol.com.br/colunas/monicaber...  \n",
-       "38754             NaN  http://www1.folha.uol.com.br/mercado/2016/01/1...  \n",
-       "83780  viniciustorres  http://www1.folha.uol.com.br/colunas/viniciust...  "
+       "        category subcategory  \\\n",
+       "14882  cotidiano         NaN   \n",
+       "6991     esporte         NaN   \n",
+       "9006     mercado         NaN   \n",
+       "\n",
+       "                                                    link  \n",
+       "14882  http://www1.folha.uol.com.br/cotidiano/2015/03...  \n",
+       "6991   http://www1.folha.uol.com.br/esporte/2015/09/1...  \n",
+       "9006   http://www1.folha.uol.com.br/mercado/2017/02/1...  "
       ]
      },
      "metadata": {},
@@ -132,31 +137,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10868</th>\n",
-       "      <td>Profissional precisa saber se renovar e ir em ...</td>\n",
-       "      <td>A cena é bem comum: o chefe convoca uma reuniã...</td>\n",
-       "      <td>2017-07-05</td>\n",
-       "      <td>colunas</td>\n",
-       "      <td>americo-jose</td>\n",
-       "      <td>http://www1.folha.uol.com.br/colunas/americo-j...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13162</th>\n",
-       "      <td>Neymar é dúvida para último amistoso antes da ...</td>\n",
-       "      <td>O atacante Neymar deverá ser poupado no amisto...</td>\n",
-       "      <td>2015-02-06</td>\n",
+       "      <th>18979</th>\n",
+       "      <td>\\n\\t\\tSírios têm de contornar a guerra civil d...</td>\n",
+       "      <td>DIOGO BERCITO EM MADRI  Quando finalmente salt...</td>\n",
+       "      <td>2016-07-14</td>\n",
        "      <td>esporte</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://www1.folha.uol.com.br/esporte/2015/06/1...</td>\n",
+       "      <td>olimpiada-no-rio</td>\n",
+       "      <td>http://www1.folha.uol.com.br/esporte/olimpiada...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>996</th>\n",
-       "      <td>Morre aos 88 anos o ex-presidente do Uruguai J...</td>\n",
-       "      <td>Morreu nesta segunda-feira (24), aos 88 anos, ...</td>\n",
-       "      <td>2016-10-24</td>\n",
-       "      <td>mundo</td>\n",
+       "      <th>6387</th>\n",
+       "      <td>Bolsa tem leve alta e dólar recua de olho em j...</td>\n",
+       "      <td>O julgamento da chapa Dilma Rousseff-Michel Te...</td>\n",
+       "      <td>2017-07-06</td>\n",
+       "      <td>mercado</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>http://www1.folha.uol.com.br/mundo/2016/10/182...</td>\n",
+       "      <td>http://www1.folha.uol.com.br/mercado/2017/06/1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17135</th>\n",
+       "      <td>Lula! O morango de Atibaia!</td>\n",
+       "      <td>Buemba! Buemba! Macaco Simão Urgente! O esculh...</td>\n",
+       "      <td>2016-02-17</td>\n",
+       "      <td>colunas</td>\n",
+       "      <td>josesimao</td>\n",
+       "      <td>http://www1.folha.uol.com.br/colunas/josesimao...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -164,19 +169,19 @@
       ],
       "text/plain": [
        "                                                   title  \\\n",
-       "10868  Profissional precisa saber se renovar e ir em ...   \n",
-       "13162  Neymar é dúvida para último amistoso antes da ...   \n",
-       "996    Morre aos 88 anos o ex-presidente do Uruguai J...   \n",
+       "18979  \\n\\t\\tSírios têm de contornar a guerra civil d...   \n",
+       "6387   Bolsa tem leve alta e dólar recua de olho em j...   \n",
+       "17135                        Lula! O morango de Atibaia!   \n",
        "\n",
        "                                                    text        date category  \\\n",
-       "10868  A cena é bem comum: o chefe convoca uma reuniã...  2017-07-05  colunas   \n",
-       "13162  O atacante Neymar deverá ser poupado no amisto...  2015-02-06  esporte   \n",
-       "996    Morreu nesta segunda-feira (24), aos 88 anos, ...  2016-10-24    mundo   \n",
+       "18979  DIOGO BERCITO EM MADRI  Quando finalmente salt...  2016-07-14  esporte   \n",
+       "6387   O julgamento da chapa Dilma Rousseff-Michel Te...  2017-07-06  mercado   \n",
+       "17135  Buemba! Buemba! Macaco Simão Urgente! O esculh...  2016-02-17  colunas   \n",
        "\n",
-       "        subcategory                                               link  \n",
-       "10868  americo-jose  http://www1.folha.uol.com.br/colunas/americo-j...  \n",
-       "13162           NaN  http://www1.folha.uol.com.br/esporte/2015/06/1...  \n",
-       "996             NaN  http://www1.folha.uol.com.br/mundo/2016/10/182...  "
+       "            subcategory                                               link  \n",
+       "18979  olimpiada-no-rio  http://www1.folha.uol.com.br/esporte/olimpiada...  \n",
+       "6387                NaN  http://www1.folha.uol.com.br/mercado/2017/06/1...  \n",
+       "17135         josesimao  http://www1.folha.uol.com.br/colunas/josesimao...  "
       ]
      },
      "metadata": {},
@@ -184,8 +189,12 @@
     }
    ],
    "source": [
-    "dados_treino = pd.read_csv(r\"..\\06-word2vec-interpretação-da-linguagem-humana-com-word-embedding\\database-train-project-07.csv\")\n",
-    "dados_teste = pd.read_csv(r\"..\\06-word2vec-interpretação-da-linguagem-humana-com-word-embedding\\database-test-project-07.csv\")\n",
+    "# dados_treino = pd.read_csv(r\"..\\06-word2vec-interpretação-da-linguagem-humana-com-word-embedding\\database-train-project-07.csv\")\n",
+    "# dados_teste = pd.read_csv(r\"..\\06-word2vec-interpretação-da-linguagem-humana-com-word-embedding\\database-test-project-07.csv\")\n",
+    "\n",
+    "dados_teste = pd.read_csv(\"https://raw.githubusercontent.com/goosekiing/word2vec-interpretacao-da-linguagem-humana-com-word-embedding/eb26014ad11cf54981bc048c541f4b28f8f0337b/database-test-project-07.csv\")\n",
+    "dados_treino = pd.concat([pd.read_csv(f\"https://raw.githubusercontent.com/goosekiing/word2vec-interpretacao-da-linguagem-humana-com-word-embedding/eb26014ad11cf54981bc048c541f4b28f8f0337b/database-train-project-07-part-{i+1}.csv\") for i in range(3)])\n",
+    "\n",
     "display(dados_treino.sample(3), dados_teste.sample(3))"
    ]
   },
