--- a/project-08-part-2.ipynb
+++ b/project-08-part-2.ipynb
@@ -51,31 +51,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>14882</th>\n",
-       "      <td>Protesto contra falta de energia elétrica ocup...</td>\n",
-       "      <td>Cerca de 150 moradores protestam na noite dest...</td>\n",
-       "      <td>2015-03-21</td>\n",
-       "      <td>cotidiano</td>\n",
+       "      <th>6824</th>\n",
+       "      <td>Ex-Guns N' Roses, Slash volta ao país como est...</td>\n",
+       "      <td>Acostumado a dividir atenções no palco, o guit...</td>\n",
+       "      <td>2015-01-13</td>\n",
+       "      <td>ilustrada</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>http://www1.folha.uol.com.br/cotidiano/2015/03...</td>\n",
+       "      <td>http://www1.folha.uol.com.br/ilustrada/2015/01...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6991</th>\n",
-       "      <td>Atlético-MG vence e se aproxima do Corinthians</td>\n",
-       "      <td>O Atlético-MG conquistou a segunda vitória con...</td>\n",
-       "      <td>2015-09-09</td>\n",
-       "      <td>esporte</td>\n",
+       "      <th>11227</th>\n",
+       "      <td>Segurança e aliança militar viram temas da age...</td>\n",
+       "      <td>Com a sensação de que o mundo é um lugar mais ...</td>\n",
+       "      <td>2017-09-20</td>\n",
+       "      <td>mundo</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>http://www1.folha.uol.com.br/esporte/2015/09/1...</td>\n",
+       "      <td>http://www1.folha.uol.com.br/mundo/2017/09/192...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9006</th>\n",
-       "      <td>3G Capital tem até US$ 15 bilhões para usar em...</td>\n",
-       "      <td>O grupo de capital privado 3G Capital, que enc...</td>\n",
-       "      <td>2017-02-20</td>\n",
-       "      <td>mercado</td>\n",
+       "      <th>3603</th>\n",
+       "      <td>João Carlos Martins recebe alta após ser inter...</td>\n",
+       "      <td>O maestro João Carlos Martins, 76, recebeu alt...</td>\n",
+       "      <td>2017-01-29</td>\n",
+       "      <td>ilustrada</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>http://www1.folha.uol.com.br/mercado/2017/02/1...</td>\n",
+       "      <td>http://www1.folha.uol.com.br/ilustrada/2017/01...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -83,24 +83,24 @@
       ],
       "text/plain": [
        "                                                   title  \\\n",
-       "14882  Protesto contra falta de energia elétrica ocup...   \n",
-       "6991      Atlético-MG vence e se aproxima do Corinthians   \n",
-       "9006   3G Capital tem até US$ 15 bilhões para usar em...   \n",
+       "6824   Ex-Guns N' Roses, Slash volta ao país como est...   \n",
+       "11227  Segurança e aliança militar viram temas da age...   \n",
+       "3603   João Carlos Martins recebe alta após ser inter...   \n",
        "\n",
        "                                                    text        date  \\\n",
-       "14882  Cerca de 150 moradores protestam na noite dest...  2015-03-21   \n",
-       "6991   O Atlético-MG conquistou a segunda vitória con...  2015-09-09   \n",
-       "9006   O grupo de capital privado 3G Capital, que enc...  2017-02-20   \n",
+       "6824   Acostumado a dividir atenções no palco, o guit...  2015-01-13   \n",
+       "11227  Com a sensação de que o mundo é um lugar mais ...  2017-09-20   \n",
+       "3603   O maestro João Carlos Martins, 76, recebeu alt...  2017-01-29   \n",
        "\n",
        "        category subcategory  \\\n",
-       "14882  cotidiano         NaN   \n",
-       "6991     esporte         NaN   \n",
-       "9006     mercado         NaN   \n",
+       "6824   ilustrada         NaN   \n",
+       "11227      mundo         NaN   \n",
+       "3603   ilustrada         NaN   \n",
        "\n",
        "                                                    link  \n",
-       "14882  http://www1.folha.uol.com.br/cotidiano/2015/03...  \n",
-       "6991   http://www1.folha.uol.com.br/esporte/2015/09/1...  \n",
-       "9006   http://www1.folha.uol.com.br/mercado/2017/02/1...  "
+       "6824   http://www1.folha.uol.com.br/ilustrada/2015/01...  \n",
+       "11227  http://www1.folha.uol.com.br/mundo/2017/09/192...  \n",
+       "3603   http://www1.folha.uol.com.br/ilustrada/2017/01...  "
       ]
      },
      "metadata": {},
@@ -137,51 +137,56 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>18979</th>\n",
-       "      <td>\\n\\t\\tSírios têm de contornar a guerra civil d...</td>\n",
-       "      <td>DIOGO BERCITO EM MADRI  Quando finalmente salt...</td>\n",
-       "      <td>2016-07-14</td>\n",
-       "      <td>esporte</td>\n",
-       "      <td>olimpiada-no-rio</td>\n",
-       "      <td>http://www1.folha.uol.com.br/esporte/olimpiada...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6387</th>\n",
-       "      <td>Bolsa tem leve alta e dólar recua de olho em j...</td>\n",
-       "      <td>O julgamento da chapa Dilma Rousseff-Michel Te...</td>\n",
-       "      <td>2017-07-06</td>\n",
-       "      <td>mercado</td>\n",
+       "      <th>632</th>\n",
+       "      <td>Com crise, comerciantes de Ilhabela esperam fa...</td>\n",
+       "      <td>Caminhar pelas ruas do centro de Ilhabela pode...</td>\n",
+       "      <td>2016-12-24</td>\n",
+       "      <td>cotidiano</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>http://www1.folha.uol.com.br/mercado/2017/06/1...</td>\n",
+       "      <td>http://www1.folha.uol.com.br/cotidiano/2016/12...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17135</th>\n",
-       "      <td>Lula! O morango de Atibaia!</td>\n",
-       "      <td>Buemba! Buemba! Macaco Simão Urgente! O esculh...</td>\n",
-       "      <td>2016-02-17</td>\n",
+       "      <th>9666</th>\n",
+       "      <td>Gratificação de 30% para juízes complica orçam...</td>\n",
+       "      <td>A determinação de que juízes federais e do tra...</td>\n",
+       "      <td>2015-03-11</td>\n",
        "      <td>colunas</td>\n",
-       "      <td>josesimao</td>\n",
-       "      <td>http://www1.folha.uol.com.br/colunas/josesimao...</td>\n",
+       "      <td>monicabergamo</td>\n",
+       "      <td>http://www1.folha.uol.com.br/colunas/monicaber...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1484</th>\n",
+       "      <td>No ático ou nos fundos</td>\n",
+       "      <td>No domingo, 4 de outubro, em São Paulo, na rua...</td>\n",
+       "      <td>2015-10-22</td>\n",
+       "      <td>colunas</td>\n",
+       "      <td>contardocalligaris</td>\n",
+       "      <td>http://www1.folha.uol.com.br/colunas/contardoc...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                   title  \\\n",
-       "18979  \\n\\t\\tSírios têm de contornar a guerra civil d...   \n",
-       "6387   Bolsa tem leve alta e dólar recua de olho em j...   \n",
-       "17135                        Lula! O morango de Atibaia!   \n",
+       "                                                  title  \\\n",
+       "632   Com crise, comerciantes de Ilhabela esperam fa...   \n",
+       "9666  Gratificação de 30% para juízes complica orçam...   \n",
+       "1484                             No ático ou nos fundos   \n",
        "\n",
-       "                                                    text        date category  \\\n",
-       "18979  DIOGO BERCITO EM MADRI  Quando finalmente salt...  2016-07-14  esporte   \n",
-       "6387   O julgamento da chapa Dilma Rousseff-Michel Te...  2017-07-06  mercado   \n",
-       "17135  Buemba! Buemba! Macaco Simão Urgente! O esculh...  2016-02-17  colunas   \n",
+       "                                                   text        date  \\\n",
+       "632   Caminhar pelas ruas do centro de Ilhabela pode...  2016-12-24   \n",
+       "9666  A determinação de que juízes federais e do tra...  2015-03-11   \n",
+       "1484  No domingo, 4 de outubro, em São Paulo, na rua...  2015-10-22   \n",
        "\n",
-       "            subcategory                                               link  \n",
-       "18979  olimpiada-no-rio  http://www1.folha.uol.com.br/esporte/olimpiada...  \n",
-       "6387                NaN  http://www1.folha.uol.com.br/mercado/2017/06/1...  \n",
-       "17135         josesimao  http://www1.folha.uol.com.br/colunas/josesimao...  "
+       "       category         subcategory  \\\n",
+       "632   cotidiano                 NaN   \n",
+       "9666    colunas       monicabergamo   \n",
+       "1484    colunas  contardocalligaris   \n",
+       "\n",
+       "                                                   link  \n",
+       "632   http://www1.folha.uol.com.br/cotidiano/2016/12...  \n",
+       "9666  http://www1.folha.uol.com.br/colunas/monicaber...  \n",
+       "1484  http://www1.folha.uol.com.br/colunas/contardoc...  "
       ]
      },
      "metadata": {},
@@ -200,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,20 +395,60 @@
     "    RL.fit(x_treino, y_treino)\n",
     "    categorias = RL.predict(x_teste)\n",
     "    resultados = classification_report(y_teste, categorias)\n",
-    "    print(resultados)\n",
-    "    return RL"
+    "    return RL, resultados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RL_cbow, resultados_cbow = classificador(modelo= w2v_modelo_cbow,\n",
+    "                        x_treino= matriz_vetores_treino_cbow,\n",
+    "                        y_treino= dados_treino[\"category\"],\n",
+    "                        x_teste= matriz_vetores_teste_cbow,\n",
+    "                        y_teste= dados_teste[\"category\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RL_sg, resultados_sg = classificador(modelo= w2v_modelo_sg,\n",
+    "                        x_treino= matriz_vetores_treino_sg,\n",
+    "                        y_treino= dados_treino[\"category\"],\n",
+    "                        x_teste= matriz_vetores_teste_sg,\n",
+    "                        y_teste= dados_teste[\"category\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
+      "-----------|---------SKIP-GRAM CR:---------|-----------\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "     colunas       0.81      0.71      0.76      6103\n",
+      "   cotidiano       0.64      0.80      0.71      1698\n",
+      "     esporte       0.93      0.87      0.90      4663\n",
+      "   ilustrada       0.14      0.85      0.24       131\n",
+      "     mercado       0.84      0.79      0.81      5867\n",
+      "       mundo       0.75      0.84      0.79      2051\n",
+      "\n",
+      "    accuracy                           0.79     20513\n",
+      "   macro avg       0.68      0.81      0.70     20513\n",
+      "weighted avg       0.82      0.79      0.80     20513\n",
+      "\n",
+      "-----------|-----------CBOW CR:-----------|-----------\n",
+      "               precision    recall  f1-score   support\n",
       "\n",
       "     colunas       0.80      0.71      0.75      6103\n",
       "   cotidiano       0.64      0.81      0.71      1698\n",
@@ -420,49 +465,13 @@
     }
    ],
    "source": [
-    "RL_cbow = classificador(modelo= w2v_modelo_cbow,\n",
-    "                        x_treino= matriz_vetores_treino_cbow,\n",
-    "                        y_treino= dados_treino[\"category\"],\n",
-    "                        x_teste= matriz_vetores_teste_cbow,\n",
-    "                        y_teste= dados_teste[\"category\"])"
+    "print(\"-----------|---------SKIP-GRAM CR:---------|-----------\\n\", resultados_sg)\n",
+    "print(\"-----------|-----------CBOW CR:-----------|-----------\\n\", resultados_cbow)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "     colunas       0.81      0.71      0.76      6103\n",
-      "   cotidiano       0.64      0.80      0.71      1698\n",
-      "     esporte       0.93      0.87      0.90      4663\n",
-      "   ilustrada       0.14      0.85      0.24       131\n",
-      "     mercado       0.84      0.79      0.81      5867\n",
-      "       mundo       0.75      0.84      0.79      2051\n",
-      "\n",
-      "    accuracy                           0.79     20513\n",
-      "   macro avg       0.68      0.81      0.70     20513\n",
-      "weighted avg       0.82      0.79      0.80     20513\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "RL_sg = classificador(modelo= w2v_modelo_sg,\n",
-    "                        x_treino= matriz_vetores_treino_sg,\n",
-    "                        y_treino= dados_treino[\"category\"],\n",
-    "                        x_teste= matriz_vetores_teste_sg,\n",
-    "                        y_teste= dados_teste[\"category\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
